<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="251dp"
            android:layout_height="59dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="42dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="Novel Lovers"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUsername"
            android:layout_width="357dp"
            android:layout_height="61dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="27dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPass"
            android:layout_width="351dp"
            android:layout_height="57dp"
            android:layout_marginStart="31dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="29dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUsername">

            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="#616161"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="126dp"
            android:layout_height="59dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="28dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:cornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass" />

        <TextView
            android:id="@+id/textNewAcc"
            android:layout_width="129dp"
            android:layout_height="41dp"
            android:layout_marginStart="162dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="163dp"
            android:gravity="center"
            android:text="@string/dont_have_acc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass"
            tools:ignore="TextSizeCheck,VisualLintOverlap" />

        <TextView
            android:id="@+id/buttonCreateNewAcc"
            android:layout_width="209dp"
            android:layout_height="49dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/btn_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/create_new_account"
            android:textColor="#7C4DFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNewAcc"
            app:layout_constraintVertical_bias="0.377"
            tools:ignore="TextSizeCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
